@@ -1,3 +1,5 @@
+  - Add more Moosish modules to the list of modules that set strict. (suggested by RIBASUSHI)
+
 0.19 Wed Feb 20 11:12:39 2013
   - Skip test if Moose::Autobox is not installed.
 
